test-suite/tests/roundtrip/invalid/semantic/multiple_errors/02/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/multiple_errors/02/input.essence:3:33:
  |
3 | letting Looper be domain (bool, Looper)
  |                                 ^^^^^^
Error: Symbol not found "Looper"

tests/roundtrip/invalid/semantic/multiple_errors/02/input.essence:6:16:
  |
6 | such that loop[0] = true
  |                ^
Error: Tuple index 0 out of bounds

